--- a/estilo/estilos.css
+++ b/estilo/estilos.css
@@ -1,7 +1,7 @@
 
 body{
 
-    margin: 0px 0px 5px;
+    padding: 0px 0px 5px;
     font-family: 'Karla';
 
 }
@@ -18,11 +18,11 @@ nav a{
     margin-right: 20px;
     margin-top: 30px;
     padding:3px 5px;
-   /*background-color: black;*/
+   
     font-weight: 700;
-    /*background-color:#000;*/
+   
      border-bottom: #BD0720  5px solid;
-   /* border-radius: 100px;*/
+  
     text-align:center;
     color:black;
 
@@ -75,7 +75,8 @@ padding: 15px;
     }
 
  .cuerpo__formulario {
-
+  
+margin-right: 30px;
 
 
 }
@@ -86,7 +87,7 @@ padding: 15px;
     border-radius: 100px;
     border-color: red;
     font-size: 15px;
-    margin-right: 30px; 
+    margin-right: auto; 
     margin-top: 30px;
     width: 220px;
     height: 28px;
@@ -95,6 +96,15 @@ padding: 15px;
     
 
 }
+
+.cuerpo__label--button {
+
+
+width: 70px;
+height: 30px; 
+
+}
+
 
 
 .cuerpo__logo {
@@ -120,9 +130,7 @@ display: flex;
 
 margin-top: 30px;
 
-width: 100%;
-
-height: 280px;
+max-width: 100%
 
   
 }
@@ -132,6 +140,8 @@ height: 280px;
    
 
 }
+
+
 
  
 
@@ -203,13 +213,10 @@ footer div a:hover{
   
 }
 
-.contenedor_saludable_img {
- display: grid;
-  grid-template-columns: auto auto auto auto auto auto;
-    grid-gap: 6px;
-  padding: 20px;
-   text-align: center;
-}
+div iframe {
+
+    width: 100%;
+} 
 
 
 .title_1{
@@ -244,10 +251,6 @@ margin-left: 30PX;
 
 }
 
-..texto{
-
-    text-align: center;
-}
 
 
 
@@ -257,6 +260,7 @@ width: 950px;
  margin: 100px auto ;
 
 }
+
 
 .recetas__imagenes{
 
@@ -297,16 +301,26 @@ width: 950px;
     width: 60%
 }
 
-hr {
-  background-color: red;
+.contacto_color{
+
+    background-color: black;
+
 }
+
 
 .div_bost_forms{
 
-   width: 700px; 
+    display: block;
     margin: 20px auto;
+    padding: 20px;
+
 }
 
+.imagen_center{
+
+display: flex;
+justify-content: center;
+}
  
 .div_logo_forms{
 
@@ -332,7 +346,7 @@ hr {
 
 .boton_saliditas_horno{
 
-    float: right;
+    margin: auto;
 
     width: 120px;
 }
@@ -358,96 +372,91 @@ hr {
 .carousel_letras {
 
 
-	color: black; 
-	font-weight: 500;
-	vertical-align: text-top;
+	color: white;
+  text-shadow: 2px 2px 4px #000000;
+}
+
+.rec_text{
+
+   margin-left: 30px;
+   margin-right: 60px;
+   text-align: justify;
+}
+
+.titulo_tex{
+
+    text-align: center;
+    margin-top: 60px;
+    font-weight: 500;
 }
 
 
-@media (min-width: 320px) and (max-width: 480px) {
+.rec_hr{
 
-    .cuerpo__boton{
+    color: red;
+    border: 3px solid ;
+}
 
-        margin-left: 5px;
-        font-size: 10px;
-    width: 100px ;
-    height: 10px;
-        
-    }
+.rec_h2 {
 
+    border-bottom: #BD0720  4px solid;
+    padding: 12px;
+}
 
-    .cuerpo__label {
+.rec_tex_peq {
 
-        
-        margin-bottom: 5px;
-        width: 100px;
-        height: 18px;
-       margin-left: 60px;
-        font-size: 10px;
-    }
-
-
-        .cuerpo__logo{
-
-         margin: auto;
-
-
-        }
-
-
-        nav li{
-                display: block;
-                width:180px;
-            text-align: center;
-            margin-left: 20px;
-                margin-top: 30px;
-            padding:3px ;
-
-        }
-
-        .contenedor_saludable {
-
-   margin-bottom: 30px;
-
-  
+    font-size: 14px ;
 }
 
 
-iframe {
-
-    width: 62px;
-    height: 100px;
-
-}
-
-
-.contenedor{
-
-    font-size: 9px;
-}
-
-
-.carousel_bostra{
-
-
-    width: 300px;
-    height:250px;
-
-}
-
-.title_1{
-
-    font-size: 18px;
+.rec_img {
     
-   
+    margin-top: 20px;
+    margin-bottom: 20px;
+    
+}
+@media (max-width: 320px) {
+
+    .elemento {
+        width: 100%
+      }
+
+    nav li{
+        display: block;
+         width:180px;
+        text-align: center;
+        margin-left: 20px;
+        margin-top: 30px;
+        padding:3px ;
+
+           }
+
+    .cuerpo__formulario{
+
+        margin-top: 5px;
+
+    }
+
+    .contenedor_saludable{
+
+        display: block;
+    }
+
 }
 
-.carousel_bostra_img {
+@media (max-width: 991px) {
+    .elemento {
+        width: 50%
+    }
 
-
-    width: 350px;
-    height: 250px;
-
+     
 }
+
+@media (max-width: 1200px) {
+      .elemento {
+            width: 33.33%
+      }  
+
+
 
 
