--- a/estilo/estilos.css
+++ b/estilo/estilos.css
@@ -112,7 +112,6 @@ height: 30px;
     margin: auto;
     margin-bottom: 50px;
     width: 170px;
-    /*margin-top: 60px; */
     padding: 15px;              
 
 }
@@ -256,42 +255,29 @@ margin-left: 30PX;
 
 .recetas__img {
 margin-top: 150px;
-width: 950px;
+width: 900px;
  margin: 100px auto ;
 
+}
+
+.rect_img{
+
+    margin-top: 200px;
+    max-width: 80%;
+    margin-bottom: 100px;
+    margin: auto;
 }
 
 
 .recetas__imagenes{
 
-    width: 100%;
-}
+     margin-top: 200px;
+    max-width: 70%;
+    margin-bottom: 200px;
+    margin: auto;
 
-.recetas__fondo{
-
-    background-color: #d7d7a8 ;
-    text-align: center;
-    padding: 10px;
-    margin-top: 60px;
     
 }
-
-.recetas__mosFondo{
-
-    background-color:#E0CB8A  ;
-    text-align: center;
-    padding: 10px;
-    margin-top: 60px;
-}
-
-.recetas__nanFondo{
-
-    background-color:#FFD099 ;
-    text-align: center;
-    padding: 10px;
-    margin-top: 60px;
-}
- 
 
 
 
@@ -313,6 +299,7 @@ width: 950px;
     display: block;
     margin: 20px auto;
     padding: 20px;
+    margin-bottom: 60px;
 
 }
 
@@ -324,7 +311,10 @@ justify-content: center;
  
 .div_logo_forms{
 
-    margin: 30px 500px 10px;
+    margin: auto;
+    max-width: 250px;
+    margin-top: 20px;
+    padding: 20px;
 }
 
 .butto_forms_bost{
@@ -335,14 +325,11 @@ justify-content: center;
 
 .carrusel_bost{
 
-    max-width: 1000px;
+    max-width: 80%;
     margin: 35px auto;
 }
 
-.carrusul_img_bost{
 
-    height: 200px;
-}
 
 .boton_saliditas_horno{
 
@@ -354,8 +341,7 @@ justify-content: center;
 
 .carousel_bostra{
 
-    width: 700px;
-    height: 300px;
+    max-width: 60%;
     margin: auto;
     margin-top: 30px;
     margin-bottom: 0px;
@@ -374,6 +360,8 @@ justify-content: center;
 
 	color: white;
   text-shadow: 2px 2px 4px #000000;
+  max-width: 80%;
+  text-align: center;
 }
 
 .rec_text{
@@ -381,6 +369,8 @@ justify-content: center;
    margin-left: 30px;
    margin-right: 60px;
    text-align: justify;
+   font-size: 18px;
+   padding-bottom: 40px;
 }
 
 .titulo_tex{
@@ -415,19 +405,53 @@ justify-content: center;
     margin-bottom: 20px;
     
 }
+
+.rect_video{
+
+    max-width: 60%;
+
+    display: flex;
+
+    margin-top: 50px;
+    padding: 40px;
+    margin: auto;
+}
+
+.rect_vid_m{
+
+    position:relative;
+    padding-bottom:30.25%;
+    height:0;
+    overflow:hidden;
+    margin: auto;
+    max-width: 40%; 
+    margin-bottom: 40px;  
+
+}
+
+
+.text_ext{
+
+    color: white;
+}
+
+
+
+
 @media (max-width: 320px) {
 
     .elemento {
-        width: 100%
+        width: 100%;
       }
 
     nav li{
         display: block;
          width:180px;
         text-align: center;
-        margin-left: 20px;
-        margin-top: 30px;
+        margin-left: 25px;
+        margin-top: 20px;
         padding:3px ;
+
 
            }
 
@@ -442,19 +466,42 @@ justify-content: center;
         display: block;
     }
 
+
+    .carousel_bostra {
+
+        max-width: 90%;
+    }
+
+
+    .div_logo_forms{
+
+
+        max-width: 200px;
+    }
+
+        
+
 }
+
+
+
 
 @media (max-width: 991px) {
     .elemento {
-        width: 50%
+        width: 50%;
     }
 
+
+
+
+
+           }
      
 }
 
 @media (max-width: 1200px) {
       .elemento {
-            width: 33.33%
+            width: 33.33%;
       }  
 
 
